--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -26,7 +26,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "mongoose": "^8.18.2",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.0",
