--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "- Brahim NAJI\r - Thomas MORETTI",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:backend": "npm run start --workspace=backend",
+    "start:frontend": "npm run start --workspace=frontend",
+    "test:backend": "npm run test --workspace=backend",
+    "test:frontend": "npm run test --workspace=frontend"
   },
   "keywords": [],
+  "workspaces": ["packages/*"],
   "author": "",
   "license": "ISC"
 }
