--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "dependencies": {
     "@nestjs/swagger": "^11.2.0",
     "axios": "^1.12.2",
+    "jwt-decode": "^4.0.0",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.4"
+    "@types/axios": "^0.14.4",
+    "@types/jwt-decode": "^3.1.0"
   }
 }
