--- a/package.json
+++ b/package.json
@@ -18,12 +18,18 @@
   "license": "ISC",
   "dependencies": {
     "@nestjs/swagger": "^11.2.0",
+    "@tailwindcss/vite": "^4.1.14",
+    "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
     "jwt-decode": "^4.0.0",
-    "swagger-ui-express": "^5.0.1"
+    "react-hook-form": "^7.64.0",
+    "react-toastify": "^11.0.5",
+    "swagger-ui-express": "^5.0.1",
+    "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
     "@types/axios": "^0.14.4",
-    "@types/jwt-decode": "^3.1.0"
+    "@types/jwt-decode": "^3.1.0",
+    "@types/react-toastify": "^4.1.0"
   }
 }
