--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@hookform/resolvers": "^5.2.2",
     "@nestjs/swagger": "^11.2.0",
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.90.2",
@@ -24,12 +26,15 @@
     "jwt-decode": "^4.0.0",
     "react-hook-form": "^7.64.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.2.1",
     "swagger-ui-express": "^5.0.1",
-    "tailwindcss": "^4.1.14"
+    "tailwindcss": "^4.1.14",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/axios": "^0.14.4",
     "@types/jwt-decode": "^3.1.0",
-    "@types/react-toastify": "^4.1.0"
+    "@types/react-toastify": "^4.1.0",
+    "@types/recharts": "^2.0.1"
   }
 }
