--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
     "jwt-decode": "^4.0.0",
+    "nestjs-pino": "^4.4.1",
     "react-hook-form": "^7.64.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
