--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@headlessui/react": "^2.2.9",
     "@hookform/resolvers": "^5.2.2",
     "@nestjs/swagger": "^11.2.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
     "jwt-decode": "^4.0.0",
     "nestjs-pino": "^4.4.1",
     "react-hook-form": "^7.64.0",
+    "react-quill": "^2.0.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
     "swagger-ui-express": "^5.0.1",
