--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.14.2",
     "mongoose": "^8.18.2",
     "nestjs-pino": "^4.4.1",
+    "node-fetch": "^3.3.2",
     "passport-jwt": "^4.0.1",
     "pino-pretty": "^13.1.1",
     "reflect-metadata": "^0.2.2",
